--- a/css/style.css
+++ b/css/style.css
@@ -36,5 +36,21 @@ body {
 	margin: 0 auto;
 	padding: 1em;
 	background-color: rgba(0,0,0,0);
-	color: #ffffff;
+	color: #aaaaaa;
+}
+#lifestream  a {
+	color: #ffa500;
+	text-decoration: none;
+}
+#lifestream a:hover {
+	text-decoration: underline;
+}
+#lifestream a:visited {
+	color: #d67600;
+}
+#lifestream a:active {
+	color: #ffff00;
+}
+#lifestream > ul {
+	list-style: none;
 }
