--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,8 @@ body {
 #lifestream > ul {
 	list-style: none;
 }
+#lifestream li {
+	padding: 5px 3px 5px 25px;
+   background-repeat: no-repeat;
+   background-position: left center;
+}
