--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,19 @@ a:active{
 	margin-left: 20px;
 	margin-right: 20px;
 }
-.overlay {
-	position: absolute;
+.page {
 	width: 720px;
-	top: 80px;
-	left: 50%;
-	margin-left: -360px;
+	margin: 20px auto;
+	background-color: rgba(0,0,0,0.5);
 	color: #dddddd;
 	padding: 10px;
+}
+.js-enabled .page {
+	position: absolute;
+	top: 80px;
+	left: 50%;
+	margin: 0 0 0-360px;
 	display: none;
-	background-color: rgba(0,0,0,0.5);
 }
 #close-btn {
 	position: absolute;
