--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ h2 {
 	font-family: helvetica;
 	color: #ffffff;
 }
+h3 {
+	margin: 10px 0;
+}
+p {
+	margin: 10px 0;
+}
 a {
 	color: #ffa500;
 	text-decoration: none;
