--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ a:active{
 .page {
 	width: 720px;
 	margin: 20px auto;
+	background-color: rgb(0,0,0);
 	background-color: rgba(0,0,0,0.5);
 	color: #dddddd;
 	padding: 10px;
@@ -80,9 +81,12 @@ a:active{
 	left: 0;
 	width: 100%;
 	height: 100%;
-	opacity: 0.5;
 	background-color: #000000;
 	display: none
+	/* Cross browser opacity */
+	zoom: 1;
+   filter: alpha(opacity=50);
+   opacity: 0.5;
 }
 #lifestream > h2 > a > img {
 	margin-right: 10px;
