--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ a:active{
 	width: 100%;
 	height: 100%;
 	background-color: #000000;
-	display: none
+	display: none;
 	/* Cross browser opacity */
 	zoom: 1;
    filter: alpha(opacity=50);
