--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,11 @@ html {
 }
 body {
 	font-family:
-		helvetica
-		/*verdana*/
+		/*helvetica*/
+		verdana
 		/*Trebuchet Ms*/
 	;
+	font-size: 15px;
 }
 h2 {
 	margin-bottom: 20px;
@@ -58,6 +59,10 @@ a:active{
 	background-color: rgba(0,0,0,0.5);
 	color: #dddddd;
 	padding: 10px;
+}
+#webdev, #about {
+	line-height: 1.6;
+	text-align: justify;
 }
 .js-enabled .page {
 	position: absolute;
