--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 * { margin: 0; padding: 0; }
 /* Full page background image */
 html.no-js, html.backgroundsize {
-	background-image: url(../img/page-bg.jpg);
+	background-image: url(../img/full-page-bg/pieces-of-me.jpg);
 	background-attachment: fixed;
 	background-position: center center;
 	background-repeat: no-repeat;
